--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.1",
+    "react-expand-animated": "^1.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-select": "^3.1.0",
+    "react-scroll": "^1.8.4",
+    "react-select": "^3.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
