--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
@@ -10,6 +11,8 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.6.0",
+    "dotenv": "^16.0.3",
+    "email-js": "^2.0.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.4",
