--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angelofloresio",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@types/source-map": "^0.5.7",
     "bootstrap": "^4.6.0",
     "dotenv": "^16.0.3",
     "email-js": "^2.0.2",
@@ -20,10 +21,13 @@
     "react-expand-animated": "^1.0.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "react-select": "^3.2.0",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
